# rocket_reqwest_test

./: Cargo.toml
src/: main.rs
