[package]
name = "request_test"
version = "0.1.0"
authors = ["Chris Prohoda <cgprohoda@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "*", features = ["json"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
futures = "*"
tokio = "*"
